app/client/style.css
/* Use Open Sans as the default sans serif font. */
@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,500,700|Source+Code+Pro:300,400,500,700");

/* Set up some CSS variables to theme the application. */
:root {
  --matr-navbar-bg: #ECECEC;
  --matr-navbar-bg-rgb: 236, 236, 236;
}

/* Change bootstrap variable values.
 See https://getbootstrap.com/docs/5.2/customize/css-variables/
 */
body {
  color: #000000;
}

/* Navbar styling */
.basic-nav {
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: large;
  background-color: #ffffff;
  color: #000000;
}

.basic-nav.shrink {
  transition: height 0.3s ease;
}

.basic-nav img.shrink {
  transition: wdith 0.3s ease, height 0.3s ease;
}

.nav-tabs {
  margin-top: 35px;
  margin-left: 30px;
}

/* Color gradient, could be for footer
.gradient-colors {
  background: linear-gradient(to right, rgb(255, 255, 255, 0.2) 50%, rgb(135, 205, 250, 0.2), rgb(0, 0, 128, 0.2), rgb(246, 80, 38, 0.2), rgb(242, 133, 0, 0.2), rgb(83, 0, 83, 0.2), rgb(152, 41, 133, 0.2));
} */

/* Set the SignIn and SignUp alerts background. */
#signin-page .alert-light, #signup-page .alert-light {
  --bs-alert-bg: var(--matr-navbar-bg);
}

/* Define custom styles */
.gray-background {
  background-color: var(--bs-gray-200);
  color: var(--bs-dark);
  padding-top: 10px;
  padding-bottom: 20px;
}

/* styling for Landing page */
#landing .top-img {
  /*noinspection CssUnknownTarget*/
  background-image: url("images/landing.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 100%;
  padding-top: 20%;
  position: relative;
  top: -1.5rem;
}

/* CSS for animated text on landing page */
.anim-text {
  border-right: 5px solid;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  animation:
    typing 6s,
    cursor .4s step-end infinite alternate;
}

@keyframes cursor {
  50% {border-color: transparent}
}

@keyframes typing {
  from {width: 0}
}

#landing hr {
  margin: 2rem 0;
  height: 2px;
  width: 50%;
  border: none;
  border-radius: 6px;
  background: linear-gradient(
      to right,
      rgba(81,123, 190, 1),
      rgba(241, 114, 25, 1),
      rgba(126, 22, 84, 1),
      rgba(81, 72, 153, 1)
  )
}

#landing .btn {
  border-radius: 25px;
  border: none;
  background-color: rgba(126, 22, 84, 1);
}
#landing .btn:hover {
  border-radius: 25px;
  background-color: rgba(126, 22, 84, 0.9);
}

